docs/0.18.0/zh/components/spreadsheet.mdx
---
title: SpreadsheetEditor
description: 工作簿内容、计算内核配置、事件与宿主扩展接口。
---

# SpreadsheetEditor

`SpreadsheetEditor` 是受控工作簿组件，提供工作表、公式、原生表格、图表、条件格式、数据透视表
与打印布局模型。

## 属性

| 属性 | 类型 | 必填 | 默认值 | 说明 |
| --- | --- | --- | --- | --- |
| `content` | `SpreadsheetContent` | 是 | — | 受控工作簿内容。 |
| `onChange` | `(content: SpreadsheetContent) => void` | 是 | — | 返回完整的新工作簿。 |
| `collaboration` | `OfficeCollaborationSession` | 否 | 无 | 以已初始化的 Yjs Spreadsheet 作为规范值。 |
| `presence` | `OfficeCollaborationPresence` | 否 | 无 | 发布区域、显示原生远端单元格位置并支持成员跳转；必须与 `collaboration` 使用同一会话。 |
| `preview` | `boolean` | 否 | `false` | 只读工作簿。 |
| `saveStatus` | `string` | 否 | `'Saved automatically'` | 由宿主管理的保存状态。 |
| `fileActions` | `readonly OfficeFileAction[]` | 否 | `[]` | 保存、导出、历史记录与审批等操作。 |
| `kernelWasmUrl` | `string` | 否 | 内置内核 | 公式与工作簿计算内核地址。 |
| `onAgentRequest` | `(request: EditorAgentRequest) => void \| Promise<void>` | 否 | — | 把当前单元格或区域发送给宿主 AI 流程。 |
| `theme` | `'light' \| 'dark' \| 'system'` | 否 | `'system'` | 配色模式。 |

## 内容结构

| 字段 | 类型 | 说明 |
| --- | --- | --- |
| `type` | `'spreadsheet'` | 内容类型标识。 |
| `sheets` | `WorkSpreadsheetSheet[]` | 工作表、单元格、公式、样式、原生表格、图片、图表与数据透视表。 |
| `sheets[].tables` | `WorkSpreadsheetTable[]` | ListObject 身份、区域、列、筛选、标题/汇总标记与内置样式。 |
| `calculation` | `WorkSpreadsheetCalculationSettings` | 计算模式、迭代、精度与加载行为。 |
| `namedRanges` | `WorkSpreadsheetNamedRange[]` | 工作簿级与工作表级名称。 |
| `printAreas`, `printTitles` | 表格打印字段 | 打印区域与重复打印的行、列。 |
| `pageBreaks`, `pageSetups` | 表格页面字段 | 分页符、纸张、方向、缩放、边距、页眉与页脚。 |

## 稀疏工作表与虚拟编辑

`row` 和 `column` 表示工作表的逻辑尺寸。`data` 可以是稀疏 JavaScript 矩阵，其
`length` 达到逻辑尺寸，但只有已填充的行与单元格索引是数组自身属性。工作表也可以使用
Fortune Sheet 的稀疏 `celldata` 投影。不要使用 `Array.from`、遍历完整区域的嵌套循环，
或会把数组空位展开的 JSON 序列化把它转换成密集矩阵。

编辑器只渲染和搜索已经物化的单元格，同时保留完整滚动范围。滚动到任意位置，包括工作表
最大行或最大列，都不会触发 `onChange`。在虚拟空白行输入时，只会物化该行和被编辑的
单元格，不会分配已有数据与新坐标之间的所有行。公式依赖扫描、选区统计、条件格式与宿主
投影也遵循同一稀疏约定。

支持的 XLSX 上限为 1,048,576 行、16,384 列（`XFD`）。导入会保留工作表逻辑尺寸，
但不会分配每个空白单元格；导出只写入逻辑尺寸与已填充单元格，因此最大尺寸的稀疏工作表
也可以完成 XLSX 往返，而不会变成密集矩阵。

### 百万单元格量化结果

在文档记录的 Apple M2 Pro、16 GB、headless Chrome 149 参考环境中，100,000 行 ×
10 列 XLSX 夹具中位 0.480 秒进入可交互状态，连续滚动为 120.1 FPS，p95 帧间隔
12.9 ms，滚动期间没有 Long Task；保留约 38.41 MiB 和 903 个 DOM 节点，
`Ctrl+End` 到 `J100000` 为 77.3 ms。连续两次受控编辑墙钟延迟为 52.5 ms 和
45.9 ms。可在本地生产预览上运行 `bun run performance:large-spreadsheets` 与
`bun run performance:large-spreadsheet-edits` 复现当前夹具；完整方法和范围见
[性能证据](/en/browser-editor-architecture.md#current-100000-unit-evidence)。

该夹具是矩形百万已填充单元格工作簿，不是语义 ListObject 性能测试。它量化导入、可见
Canvas 绘制、导航与受控单元格发布，不量化结构化引用、计算列、汇总、转换为区域或 table
part 导出。

## 原生 Table 与 ListObject

“插入 → 表格”和网格内的 `Cmd/Ctrl+T` 会打开同一创建弹窗。单个单元格会扩展到有限的
当前区域，显式多行选区保持精确范围。快捷键只属于工作表网格，不会拦截宿主输入框、公式栏、
单元格编辑、弹出菜单或模态弹窗。创建时会捕获区域和“表包含标题”选项，生成工作簿内唯一的
`TableN` 名称，并把空白、无效或重复标题规范成唯一列名。

`sheet.tables` 保存真正的语义记录，而不是用单元格颜色模拟表格。每条记录包含稳定 ID、
OOXML 数字 ID（如有）、名称、从零开始且包含端点的区域、有序列定义、支持的筛选条件、
标题/汇总行标记、内置样式以及首列、末列、行条纹和列条纹选项。一次创建最多覆盖
100,000 个单元格；空区域、越界、合并、保护、数据透视表、与其他表格或工作表级
AutoFilter 重叠的请求会在修改前失败。

选中表格后会自动进入上下文“表格设计”功能区。用户可以修改名称，并从 60 个原生 OOXML
样式中选择浅色 1–21、中等 1–28 或深色 1–11；样式库在桌面和紧凑宽度下都支持二维方向键、
Home 与 End 导航，并在选择后精确把焦点还给触发按钮。首列、末列、行条纹和列条纹修改的是
表格语义标记。每次创建或设计操作只发布一次受控值，并生成一条撤销记录。

普通表格样式只在 Fortune 的可见单元格 Canvas 回调中解析和绘制。标题、正文、条纹、文字
强调和边框的成本随视口变化，不会把颜色写入所有受控单元格；条件格式仍拥有更高的显示
优先级。“转换为区域”是例外，它会先把用户确认的外观物化为原生填充、文字强调和边框，
再删除 ListObject。若矩阵展开可能超过一百万个槽位，转换自动改用稀疏 `celldata`，不会分配
无关行列；检测到公式、名称、验证、条件格式或图表中的结构化引用时会失败关闭。

现有行列插入和删除命令会同步调整表格区域、列身份、筛选列偏移与规范标题，并阻止删除必需
的标题行、汇总行或最后一条正文。合并与工作表级 AutoFilter 也会拒绝与表格相交，避免两个
结构模型同时拥有同一区域。

XLSX 导入导出保留原生 table part、工作表关系、content type、名称/显示名称、区域、列、
标题/汇总标记、60 个内置样式及支持的值、自定义、Top 与动态筛选条件。结构化引用计算、
计算列、完整汇总行创作、切片器、外部/查询表格和高级集成仍是明确边界，不能据此宣称完整
Excel 或 传统 Office 表格对齐。

Rstest 覆盖模型、结构协调、命令、弹窗、功能区、Canvas、协作与 XLSX；Playwright 覆盖
桌面和紧凑视觉流程。`tests/e2e/spreadsheet-table.acl` 只作为本地发布门，使用
A3S Test 1.0.0、standalone agent-browser 0.26.0、Web 协议 15 和已有 Playwright
Chromium。GitHub Actions 与 Pages 不安装也不调用 A3S Test。

## 紧凑的数据验证、保护与条件格式

大范围数据验证保存在 `sheet.dataValidationRanges` 中，区域使用从零开始、包含端点的
紧凑坐标：

```ts
const sheet = {
  row: 1_048_576,
  column: 16_384,
  dataValidationRanges: [
    {
      ranges: [
        { row: [0, 1_048_575], column: [0, 16_383] },
      ],
      item: {
        type: 'dropdown',
        type2: '',
        rangeTxt: 'A1:XFD1048576',
        value1: 'Ready,Blocked',
        value2: '',
        validity: '',
        remote: false,
        prohibitInput: true,
        hintShow: true,
        hintValue: 'Choose a workflow state.',
      },
    },
  ],
};
```

较小且经过编辑的区域也可能出现在 Fortune Sheet 的直接 `dataVerification` 映射中。
精确匹配某个单元格的直接规则优先于覆盖该单元格的紧凑区域。通过编辑器创建或删除验证
规则时，会更新紧凑区域，并避免展开超过 10,000 个单元格。

工作表保护仍保存在 `config.authority`。大范围锁定或解锁区域存入
`cellProtectionRanges`，无密码可编辑区域则紧凑地保存在 `allowRangeList`；只有已经物化的
单元格才会写入直接保护标记。条件格式继续使用
`luckysheet_conditionformat_save[].cellrange` 紧凑区域，并且只计算已填充单元格。导入与
导出会把这些区域保留为原生 XLSX `sqref`、工作表保护和条件格式记录。

## 传统 Office 常用数字格式

开始选项卡的数字组提供常规、数字、人民币货币、会计专用、百分比、短日期、时间、
科学计数、分数和文本格式，并支持七组标准 `Cmd/Ctrl+Shift` 快捷键。预设只修改
Fortune 原生的 `cell.ct.fa` 与 `cell.ct.t`，不会改写值、公式、批注、链接或合并区域。

增加和减少小数位会逐个读取所选单元格自身的格式。混合选择中的货币、百分比、数字、
会计和科学计数格式会保留各自的格式类别，相同结果会压缩为矩形原生调用，并在一次批处理
和一次撤销记录中提交。日期、时间、分数、文本和无法识别的自定义格式保持原样。命令最多
处理 10,000 个单元格，避免对最大尺寸工作表的空白区域进行意外密集化。

## 字号步进与框线快捷键

开始选项卡的字体组提供可见的“增大字号”和“减小字号”按钮，并在工作表网格获得焦点时
支持以下 传统 Office 常用快捷键：

| 操作 | 快捷键 |
| --- | --- |
| 增大字号 | `Cmd/Ctrl+Shift+.` 或 `Cmd/Ctrl+]` |
| 减小字号 | `Cmd/Ctrl+Shift+,` 或 `Cmd/Ctrl+[` |
| 外侧框线 | `Cmd/Ctrl+Shift+&` |
| 清除框线 | `Cmd/Ctrl+Shift+_` |

字号使用统一的 9、10、11、12、14、16、18、20、22、24、28、36、48、72 点阶梯。
混合选择会从每个单元格自身的字号分别步进，不会统一继承焦点单元格；未设置格式的空白
单元格从 10 点开始。相同结果会压缩为 Fortune 原生矩形，并通过一次 `batchCallApis`
批处理提交，因此一次手势只产生一次受控更新和一条撤销记录。每次最多处理 10,000 个
单元格。

外侧框线快捷键使用现有不可变框线模型写入黑色细实线轮廓，清除框线快捷键删除选区框线。
框线菜单同时显示快捷键提示，并通过 `aria-keyshortcuts` 暴露相同元数据。宿主输入框、
公式栏、单元格文字编辑、明确忽略编辑器快捷键的弹层和模态控件继续保留原生键盘行为。
Rstest 与桌面/紧凑 Playwright 是浏览器门禁；确定性的
`tests/e2e/spreadsheet-font-size-border-shortcuts.acl` 仅在本地通过 A3S Test 1.0.0
运行，GitHub Actions 与 Pages 不安装也不调用 A3S Test。

## 高级下划线样式

开始选项卡的字体组把下划线做成 传统 Office 风格的拆分控件。主按钮切换当前单元格或选区，
“更多下划线”菜单与“设置单元格格式”的字体页共用五种原生状态：

| 样式 | Fortune `un` | XLSX 字体值 |
| --- | --- | --- |
| 无下划线 | `0` | 不写入 `<u>` 子节点 |
| 单下划线 | `1` | `<u val="single">`；导入时省略 `val` 也表示单下划线 |
| 双下划线 | `2` | `<u val="double">` |
| 单会计用下划线 | `3` | `<u val="singleAccounting">` |
| 双会计用下划线 | `4` | `<u val="doubleAccounting">` |

`Cmd/Ctrl+U` 会关闭任意已经启用的下划线，不会把双下划线或会计用下划线降级成单下划线；
当前选区没有下划线时，同一快捷键启用单下划线。功能区、菜单、设置单元格格式、快捷键、
撤销与受控宿主更新始终操作 Fortune 原生 `un` 值，不创建第二套显示标记。混合选区只有在
用户明确修改下划线选择器后才会统一，否则保留每个单元格原值。

原生 XLSX 导入导出会保留准确的 OOXML 下划线值，SheetJS 回退导入则把布尔、数字与命名
变体归一到同一套五状态模型。菜单使用 `menuitemradio` 状态，打开时聚焦首个可用选项，
执行后恢复工作表网格焦点，并通过 `aria-keyshortcuts` 暴露快捷键。Rstest 与桌面/紧凑
Playwright 覆盖浏览器和 XLSX 路径；确定性的
`tests/e2e/spreadsheet-underline-styles.acl` 仅作为本地 A3S Test 1.0.0 门禁，采集截图、
可访问性、控制台和页面错误证据。GitHub Actions 与 Pages 不安装也不调用 A3S Test。

工作簿 Extension 上下文目前还不是稳定公共 API。宿主流程应使用 `fileActions`，
结构化 AI 操作应使用 `onAgentRequest`；不要从包的内部路径导入命令运行时模块。

## 协作与原生单元格修改

通过 `collaboration` 传入已初始化的 Spreadsheet
`OfficeCollaborationSession` 后，字段级寻址的 Yjs 模型成为规范值。浏览器绑定按稳定 ID
管理工作表和已填充单元格，投影远端修改，并把撤销限制在当前挂载客户端自己的事务。
每张工作表的表格使用独立的 ID 记录映射和显式顺序数组；不可变创建声明阻止身份复用，
名称、样式、选项、列和筛选字段的独立修改可以收敛，而无需替换整张工作表。
`presence` 必须绑定同一个会话，用于发布区域并显示远端单元格选择。

Rust、CLI、标准 MCP 与 A3S Code 使用 `spreadsheet-set-cell` 创建或递归修改一个从零
开始的坐标，使用 `spreadsheet-delete-cell` 删除完整精确匹配的单元格。
一次粘贴、填充或其他多单元格手势应使用 `spreadsheet-batch-cells`，它接受同一工作表内
1 至 4096 个不同坐标。每一项都必须提供 `nextCell`；只有 `nextCell: null` 才表示带完整
保护的精确删除。
`expectedCell: null` 只用于创建已经确认为空的坐标；其他修改会递归比较观察值，因此
不同叶子的并发修改可以合并，同一叶子的过期修改会在写入前失败。密集工作表保留矩阵
投影，稀疏工作表和首次写入的空工作表继续使用 `celldata`。批次中的所有保护先基于
同一份共享快照检查，再在一个 Yjs 事务中提交完整结果；任一冲突都不会留下部分单元格、
Presence、尺寸或持久日志修改。
